--- a/tex/latex/mydefs.tex
+++ b/tex/latex/mydefs.tex
@@ -33,6 +33,7 @@
 \DeclareMathOperator{\col}{col}
 \DeclareMathOperator*{\minimize}{minimize}
 \DeclareMathOperator*{\maximize}{maximize}
+\DeclareMathOperator*{\argmin}{argmin}
 \DeclareMathOperator*{\subto}{subject~to}
 \DeclareMathOperator{\diag}{diag}
 \DeclareMathOperator{\Diag}{Diag}
