--- a/tex/latex/mydefs.tex
+++ b/tex/latex/mydefs.tex
@@ -39,9 +39,14 @@
 \DeclareMathOperator{\Diag}{Diag}
 \DeclareMathOperator{\range}{\mathbf{range}}
 \DeclareMathOperator{\nullspace}{\mathbf{null}}
+\newcommand{\vect}[1]{\mathbbold{#1}}
+\newcommand{\vzeros}[1][]{\vect{0}_{#1}}
+\DeclareSymbolFont{bbold}{U}{bbold}{m}{n}
+\DeclareSymbolFontAlphabet{\mathbbold}{bbold}
 
 \newtheorem{theorem}{Theorem}
 \newtheorem{lemma}{Lemma}
+\newtheorem{proposition}{Proposition}
 
 % Date and Time
 \usepackage{datetime}
