--- a/tex/latex/mydefs.tex
+++ b/tex/latex/mydefs.tex
@@ -48,6 +48,16 @@
 \newtheorem{lemma}{Lemma}
 \newtheorem{proposition}{Proposition}
 
+% Programming
+\usepackage{listings}
+\lstset{language=C++,
+                basicstyle=\ttfamily,
+                keywordstyle=\color{blue}\ttfamily,
+                stringstyle=\color{red}\ttfamily,
+                commentstyle=\color{green}\ttfamily,
+                morecomment=[l][\color{magenta}]{\#}
+}
+
 % Date and Time
 \usepackage{datetime}
 \settimeformat{ampmtime}
