--- a/bibtex/bib/myreferences.bib
+++ b/bibtex/bib/myreferences.bib
@@ -1,370 +1,1 @@
-@misc{Sunnybrook,
-author={Sunnybrook Research Institute},
-howpublished={\url{https://sunnybrook.ca/research/}},
-}
-
-@article{Pulkkinen-PMB-2014,
-author={A. Pulkkinen and B. Werner and E. Martin and K. Hynynen},
-title={Numerical simulations of clinical focused ultrasound functional neurosurgery},
-journal=PMB,
-volume={59},
-year={2014},
-pages={1679--1700},
-}
-
-@article{Cybenko-MCSS-1989,
-author={G. Cybenko},
-title={Approximation by superpositions of a sigmoidal function},
-journal=MCSS,
-volume={2},
-number={4},
-year={1989},
-pages={303--314},
-}
-
-@book{Goodfellow-2016,
- title={Deep Learning},
- author={I. Goodfellow and Y. Bengio and A. Courville},
- publisher={MIT Press},
- note={\url{http://www.deeplearningbook.org}},
- year={2016}
-}
-
-@book{Hastie-2008,
-author={T. Hastie and R. Tibshirani and J. Friedman},
-title={The Elements of Statistical Learning},
-year={2008},
-publisher={Springer},
-}
-
-@book{Escoffre-2016,
-author={J.-M. Escoffre and A. Bouakaz},
-title={Therapeutic Ultrasound},
-year={2016},
-publisher={Springer},
-}
-
-@misc{TensorFlow,
-author={TensorFlow},
-howpublished={\url{https://www.tensorflow.org}},
-}
-
-@phdthesis{Jones-Thesis-2018,
-author={R. M. Jones},
-title={Transcranial Acoustic Imaging for Guiding Cavitation-Mediated Ultrasonic Brain Therapy},
-school={University of Toronto},
-year={2018},
-}
-
-@misc{FUS-Foundation,
-author={Focused Ultrasound Foundation},
-howpublished={\url{https://fusfoundation.org}},
-}
-
-@article{Jones-MP-2015,
-author={R. M. Jones and M. A. O'Reilly and K. Hynynen},
-title={Experimental demonstration of passive acoustic imaging in the human skull cavity using CT-based aberration corrections},
-journal=MP,
-volume={42},
-number={7},
-year={2015},
-pages={4385--4400},
-}
-
-@article{Pichardo-PMB-2017,
-author={S. Pichardo and C. Moreno-Hern\'{a}ndez and R. A. Drainville and V. Sin and L. Curiel and K. Hynynen},
-title={A viscoelastic model for the prediction of transcranial ultrasound propagation: application for the estimation of shear acoustic properties in the human skull},
-journal=PMB,
-volume={62},
-year={2017},
-pages={6938--6962},
-}
-
-@article{Pichardo-PMB-2010,
-author={S. Pichardo and V. W. Sin and K. Hynynen},
-title={Multi-frequency characterization of the speed of sound and attenuation coefficient for longitudinal transmission of freshly excised human skulls},
-journal=PMB,
-volume={56},
-year={2011},
-pages={219--250},
-}
-
-@article{White-IEEEUFFC-2005,
-author={J. White and G. T. Clement and K. Hynynen},
-title={Transcranial ultrasound focus reconstruction with phase and amplitude correction},
-journal=IEEEUFFC,
-volume={52},
-number={9},
-year={2005},
-pages={1518--1521},
-}
-
-@article{Clement-PMB-2002,
-author={G. T. Clement and K. Hynynen},
-title={A non-invasive method for focusing ultrasound through the human skull},
-journal=PMB,
-volume={47},
-year={2002},
-pages={1219--1236},
-}
-
-@article{Aubry-JASA-2003,
-author={J.-F. Aubry and M. Tanter and M. Pernot and J.-L. Thomas and M. Fink},
-title={Experimental demonstration of noninvasive transskull adaptive focusing based on prior computed tomography scans},
-journal=JASA,
-volume={113},
-number={1},
-year={2003},
-pages={84--93},
-}
-
-@article{Brattain-AR-2018,
-author={L. J. Brattain and B. A. Telfer and M. Dhyani and J. R. Grajo and A. E. Samir},
-title={Machine learning for medical ultrasound: status, methods, and future opportunities},
-journal=AR,
-volume={43},
-year={2018},
-pages={786--799},
-}
-
-@misc{EchoNous,
-title={EchoNous},
-howpublished={\url{https://echonous.com/}},
-note={Accessed: May 24, 2019},
-}
-
-@inproceedings{Jarosik-IEEEIUS-2018, 
-author={P. {Jarosik} and M. {Byra} and M. {Lewandowski}}, 
-booktitle={2018 IEEE International Ultrasonics Symposium (IUS)}, 
-title={WaveFlow-Towards Integration of Ultrasound Processing with Deep Learning}, 
-year={2018}, 
-month={Oct},
-address={Kobe, Japan},
-}
-
-@article{Khan-arXiv-2019,
-author={S. Khan and J. Huh and J. C. Ye},
-title={Deep learning-based universal beamformer for ultrasound imaging},
-journal={arXiv:1904.02842v1 [eess.IV]},
-year={2019},
-}
-
-@article{Krishna-JAMA-2018,
-author={V. Krishna and F. Sammartino and A. Rezai},
-title={A review of the current therapies, challenges, and future directions of transcranial focused ultrasound technology: advances in diagnosis and treatment},
-journal=JAMA-Neuro,
-volume={75},
-number={2},
-year={2018},
-pages={246--254},
-}
-
-@article{Kyriakou-IJH-2014,
-author={A. Kyriakou and E. Neufeld and B. Werner and M. M. Paulides and G. Szekely and N. Kuster},
-title={A review of numerical and experimental compensation techniques for skull-induced phase aberrations in transcranial focused ultrasound},
-journal=IJH,
-volume={30},
-number={1},
-year={2014},
-pages={36--46},
-}
-
-@article{Kyriakou-JTU-2015,
-author={A. Kyriakou and E. Neufeld and B. Werner and G. Szekely and N. Kuster},
-title={Full-wave acoustic and thermal modeling of transcranial ultrasound propagation and investigation of skull-induced aberration correction techniques: a feasibility study},
-journal=JTU,
-volume={3},
-number={11},
-year={2015},
-}
-
-@inproceedings{Rahmatullah-IEEEICCSA-2012,
-author={B. Rahmatullah and A. T. Papageorghiou and J. A. Noble},
-title={Image analysis using machine learning: anatomical landmarks detection in fetal ultrasound images},
-booktitle={Proceedings of the 2012 IEEE 36th International Conference on Computer Software and Applications},
-year={2012},
-month={Jul.},
-address={Izmir, Turkey},
-}
-
-@inproceedings{Wang-SPAWDA-2016,
-author={X.-D. Wang and N.-X. Li and W.-J. Lin and C. Su},
-title={Prediction of the skull's acoustic parameters in transcranial focused ultrasound based on neural network},
-booktitle={Proceedings of the 2016 Symposium on Piezoelectricity, Acoustic Waves, and Device Applications},
-year={2016},
-month={Oct.},
-address={Xi'an, China},
-}
-
-@article{Bianco-JASA-2019,
-author={M. J. Bianco and P. Gerstoft and J. Traer and E. Ozanich and M. A. Roch and S. Gannot and C.-A. Deledalle and W. Li},
-title={Machine learning in acoustics: a review},
-journal={arXiv:1905.04418v1 [eess.SP]},
-year={2019},
-}
-
-@article{Luchies-IEEEMI-2018,
-author={A. C. Luchies and B. C. Byram},
-title={Deep neural networks for ultrasound beamforming},
-journal=IEEEMI,
-volume={37},
-number={9},
-year={2018},
-pages={2010--2021},
-}
-
-@inproceedings{Nair-IEEEICASSP-2018,
-author={A. A. Nair and T. D. Tran and A. Reiter and M. A. L. Bell},
-title={A deep learning based alternative to beamforming ultrasound images},
-booktitle={Proceedings of the 2018 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},
-year={2018},
-month={Apr.},
-address={Calgary, Canada},
-}
-
-@article{Niu-JASA-2017,
-author={H. Niu and E. Reeves and P. Gerstoft},
-title={Source localization in an ocean waveguide using supervised machine learning},
-journal=JASA,
-volume={142},
-number={3},
-year={2017},
-pages={1176--1188},
-}
-
-@inproceedings{Reiter-SPIE-2017,
-author={A. Reiter and M. A. L. Bell},
-title={A machine learning approach to identifying point source locations in photoacoustic data},
-booktitle={Proceedings of SPIE},
-volume={10064},
-year={2017},
-month={Mar.},
-address={San Francisco, USA},
-}
-
-@inproceedings{Tom-IEEEISBI-2018,
-author={F. Tom and D. Sheet},
-title={Simulating patho-realistic ultrasound images using deep generative networks with adversarial learning},
-booktitle={Proceedings of the 2018 IEEE 15th International Symposium on Biomedical Imaging},
-year={2018},
-month={Apr.},
-address={Washington, USA},
-}
-
-@inproceedings{Waibel-SPIE-2018,
-author={D. Waibel and J. Gr\:{o}hl and F. Isensee and T. Kirchner and K. Maier-Hein and L. Maier-Hein},
-title={Reconstruction of initial pressure from limited view photoacoustic images using deep learning},
-booktitle={Proceedings of SPIE},
-volume={10494},
-year={2018},
-month={Feb.},
-address={San Francisco, USA},
-}
-
-@article{SJN-IJW:00,
-author={S. J. Norton and I. J. Won},
-title={Time exposure acoustics},
-journal={IEEE Transactions on Geoscience and Remote Sensing},
-volume={38},
-number={3},
-year={2000},
-pages={1337--1343},
-}
-
-@article{KJH-KBB-KTR-etal:17,
-author={K. J. Haworth and K. B. Bader and K. T. Rich and C. K. Holland and T. D. Mast},
-title={Quantitative frequency-domain passive cavitation imaging},
-journal={IEEE Transactions on Ultrasonics, Ferroelectrics, and Frequency Control},
-volume={64},
-number={1},
-year={2017},
-pages={177--191},
-}
-
-@article{CC-RK-JC-etal:15,
-author={C. Coviello and R. Kozick and J. Choi and M. Gy\:{o}ngy and C. Jensen and P. P. Smith and C.-C. Coussios},
-title={Passive acoustic mapping utilizing optimal beamforming in ultrasound therapy monitoring},
-journal={The Journal of the Acoustical Society of America},
-volume={137},
-number={5},
-year={2015},
-pages={2573--2585},
-}
-
-@article{EB-GHP-RC-etal:06,
-author={E. Betzig and G. H. Patterson and R. Sougrat and O. W. Lindwasser and S. Olenych and J. S. Bonifacino and M. W. Davidson and J. Lippingcott-Schwartz and H. F. Hess},
-title={Imaging intracellular fluorescent proteins at nanometer resolution},
-journal={Science},
-volume={313},
-year={2006},
-pages={1642--1645},
-}
-
-@article{FF-MAO-KH:18,
-author={F. Foroozan and M. A. O'Reilly and K. Hynynen},
-title={Microbubble localization for three-dimensional superresolution ultrasound imaging using curve fitting and deconvolution methods},
-journal={IEEE Transactions on Biomedical Engineering},
-volume={65},
-number={12},
-year={2018},
-pages={2692--2703},
-}
-
-@article{EAM-HB-XZ:12,
-author={E. A. Mukamel and H. Babcock and X. Zhuang},
-title={Statistical deconvolution for superresolution fluorescence microscopy},
-journal={Biophysical Journal},
-volume={102},
-year={2012},
-pages={2391--2400},
-}
-
-@article{RGL-SPB:05,
-author={R. G. Lorenz and S. P. Boyd},
-title={Robust minimum variance beamforming},
-journal={IEEE Transactions on Signal Processing},
-volume={53},
-number={5},
-year={2005},
-pages={1684--1696},
-}
-
-@article{RAV-ABG-ZQL:03,
-author={S. A. Vorobyov and A. B. Gersham and Z.-Q. Luo},
-title={Robust adaptive beamforming using worst-case performance optimization: a solution to the signal mismatch problem},
-journal={IEEE Transactions on Signal Processing},
-volume={51},
-number={2},
-year={2003},
-pages={313--324},
-}
-
-@article{PS-ZW-JL:03,
-author={P. Stoica and Z. Wang and J. Li},
-title={Robust {C}apon Beamforming},
-journal={IEEE Signal Processing Letters},
-volume={10},
-number={6},
-year={2003},
-pages={172--175},
-}
-
-@article{JL-PS-ZW:03,
-author={J. Li and P. Stoica and Z. Wang},
-title={On robust {C}apon beamforming and diagonal loading},
-journal={IEEE Transactions on Signal Processing},
-volume={51},
-number={7},
-year={2003},
-pages={1702--1715},
-}
-
-@article{WM-JR:12,
-author={W. Mantzel and J. Romberg},
-title={Compressive matched-field processing},
-journal={Journal of the Acoustical Society of America},
-volume={132},
-number={1},
-year={2012},
-pages={90--102},
-}
+/Users/liam/Documents/texmf/bibtex/bib/myreferences.bib
