--- a/bibtex/bib/mystrings.bib
+++ b/bibtex/bib/mystrings.bib
@@ -1,11 +1,1 @@
-@string{IEEEUFFC = "IEEE Transactions on Ultrasonics, Ferroelectrics, and Frequency Control"}
-@string{PMB = "Physics in Medicine and Biology"}
-@string{JASA="Journal of the Acoustical Society of America"}
-@string{AR="Abdominal Radiology"}
-@string{arXiv="arXiv"}
-@string{JAMA-Neuro="The Journal of the American Medical Association Neurology"}
-@string{IJH = "International Journal of Hyperthermia"}
-@string{JTU = "Journal of Therapeutic Ultrasound"}
-@string{IEEEMI = "IEEE Transactions on Medical Imaging"}
-@string{MP = "Medical Physics"}
-@string{MCSS = "Mathematics of Control, Signals and Systems"}
+/Users/liam/Documents/texmf/bibtex/bib/mystrings.bib
